webroot/sites/skoven-i-skolen.dk/themes/custom/sis/assets/components/css/components/03-organisms/seasonal-wheel.css
/* Seasonal wheel hover effect */
.seasonal-wheel {
  .red-knob,
  .seasonal-wheel-month-selector {
    & > path:hover {
      opacity: .2;
      fill: red;
    }
  }

  .seasonal-wheel-month-selector:hover {
    opacity: .2;
    fill: red;
  }

  .hover-wheel {
    opacity: .2;
    fill: red;
  }

  &__wrapper {
    position: relative;
    width: 100%;
    height: 0;
    margin-bottom: var(--grid-section-spacing) / 2;
    padding-bottom: 100%;

    @media (--viewport-md-min) {
      margin-bottom: var(--grid-section-spacing);
    }
  }

  &__image {
    position: relative;
    z-index: 0;

    & img {
      width: 100%;
      height: auto;
    }
  }

  &__overlay {
    position: absolute;
    top: 0;
    left: 0;
    z-index: 1;
    width: 100%;
    height: 100%;
    cursor: pointer;
    fill: transparent;
  }

  &__link {
    font-weight: 800;
    font-size: 1.125rem;
    font-family: Nunito, sans-serif;
    font-style: normal;
    text-decoration-line: underline;
    cursor: pointer;
  }

  &__content {
    margin-top: 150px;
  }

  /* wheel knob */

  .red-knob:hover {
    cursor: pointer;
    opacity: .3;
    fill: #c52543;
    stroke: red;
  }

  .headline-wrapper {
    display: block;

    @media (--viewport-md-min) {
      display: flex;
      justify-content: space-between;
    }
  }

  .months-activity-cards {
    display: grid;
    grid-gap: 36px;
    grid-template-columns: repeat(1, 1fr);

    @media (--viewport-ms-min) {
      grid-template-columns: repeat(2, 1fr);
    }

    @media (--viewport-sm-min) {
      grid-template-columns: repeat(3, 1fr);
    }

    @media (--viewport-md-min) {
      grid-template-columns: repeat(4, 1fr);
    }
  }

  .read-more {
    display: flex;
    justify-content: center;
    margin-top: 40px;
  }

  /* Modal Style */
  .modal {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 9;
    overflow-x: hidden;
    overflow-y: auto;
    color: #3d2859;
  }

  .modal__backdrop {
    position: fixed;
    top: 0;
    right: 0;
    bottom: 0;
    left: 0;
    z-index: 1;
    background-color: rgb(0 0 0 / 20%);
  }

  .modal__dialog {
    position: relative;
    top: 50vh;
    left: 50vw;
    z-index: 2;
    display: flex;
    flex-direction: column;
    width: 600px;
    background-color: #fff;
    border-radius: 10px;
    transform: translate(-50%, -50%);

    @media screen and (max-width: 992px) {
      width: 90vw;
    }
  }

  .modal__close {
    position: absolute;
    top: 5px;
    right: 4px;
    z-index: 1;
    width: 40px;
    height: 40px;
    cursor: pointer;

    & svg {
      max-width: 100%;
      max-height: 100%;
    }

    & svg > path {
      fill: #3d2859;
    }
  }

  .modal__header {
    padding: 15px 0 0 15px;
  }

  .modal__body {
    display: flex;
    flex-direction: column;
    align-items: stretch;
    padding: 5px var(--half-gutter-width-mobile) 15px;
    overflow: auto;

    @media (--viewport-md-min) {
      padding: 5px var(--half-gutter-width) 15px;
    }

    & .modal-image__container {
      position: relative;
      display: flex;
      flex-direction: column;
    }

    .modal-image__container--textbox {
      max-height: 300px;
    }

    & .modal__image {
      width: 100%;
      height: auto;
      max-height: 300px;
      object-fit: contain;
    }

    & .modal-link__title {
      color: #3d2859;
    }
  }

  /* Modal fade in-out animations */

  .fade-enter-active,
  .fade-leave-active {
    transition: opacity .2s;
  }

  .fade-enter,
  .fade-leave-to {
    opacity: 0;
  }

  .disabled {
    z-index: 1;
    cursor: not-allowed;
    pointer-events: none;
  }

  .hidden-modal {
    display: none;
  }
}

.overflow-hidden {
  overflow: hidden;
}

.months-wrapper {
  &__divider {
    position: relative;
    width: 100%;
    height: 0;
    margin-bottom: 18px;
    padding-bottom: 2.5%;

    & svg {
      position: absolute;
      top: 0;
      left: 0;
      width: 100% !important;
      height: 100%;
    }
  }
}

.seasonal-wheel-bg {
  width: 100%;
  margin-top: -3rem;

  @media (--viewport-sm-min) {
    z-index: -5;
    width: 100%;
    height: 100%;
    margin-top: -25rem;
  }

  img {
    width: inherit;
  }
}

